2004-07-23 Gareth Jones <moderob@lineone.net>

	* src/pkgbuild.in: Added usage.

	* src/pkgunpack.in: Touched.
	* man/pkgunpack.1.in: Touched.
	* Makefile.defs: Reference to pkgunpack added.

	* src/libprometheus.bash.in: Sectioned into function groups.  Restored
	  is_set, is_func, override_var, override_array, override_func,
	  stage_overrides, set_directory (formerly pkgdir), prepare_build_env
	  & open_package.

	* etc/prometheus.conf.in: Added logfile (replaces log_build) & check.
	* etc/REFERENCE.pkg: Restored.  Changed dep variable into deps array.
	  Added logfile, check & check_pkg.

2004-07-21 Gareth Jones <moderob@lineone.net>

	* src/libprometheus.bash.in: Added terminated function & trap for
	  SIGHUP, SIGINT & SIGQUIT.

2004-07-20 Gareth Jones <moderob@lineone.net>

	* Makefile: Added GPL notice.
	* etc/Makefile: Added GPL notice.
	* man/Makefile: Added GPL notice.
	* profiles/Makefile: Added GPL notice.
	* src/Makefile: Added GPL notice.
	* src/compact.in: Added GPL notice.
	* src/pkgadd.in: Added GPL notice.
	* src/pkgbuild.in: Added GPL notice.
	* src/pkgcheck.in: Added GPL notice.
	* src/pkgget.in: Added GPL notice.
	* src/pkginfo.in: Added GPL notice.
	* src/pkginstall.in: Added GPL notice.
	* src/pkgrm.in: Added GPL notice.
	* src/libprometheus.bash.in: Added GPL notice, also added brief note to
	  version function output.
	* x86stepping/Makefile: Added GPL notice.
	* x86stepping/x86stepping.c: Added GPL notice.

2004-07-08 Gareth Jones <moderob@lineone.net>

	* TODO: Restored & updated.

2004-07-04 Gareth Jones <moderob@lineone.net>

	* src/libprometheus.bash.in: Restored temp_file & remove_temp_files.
	  Added call to remove_temp_files to finish.

	* man/Makefile: Fixed installation of prometheus.conf.5.
	* man/prometheus.conf.5.in: Written.

	* etc/prometheus.conf.in: Restored & cxx parameter added.

	* INSTALL: Makefile => Makefile.defs & /etc/pkg => /etc/prometheus.

2004-07-03 Gareth Jones <moderob@lineone.net>
